# image-metadata-editor

./: .gitignore  extract_libs.sh  fix-pkg-config.bat  package.json  tsconfig.json
.github/workflows/: main.yml  vendor-libraries.yml
scripts/: extract-all-libs.sh  extract-linux-libs.sh  extract-macos-libs.sh  extract-windows-libs.ps1
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: launcher.bat
src-tauri/libs/linux/: run_with_libs.sh
src-tauri/libs/linux/x86_64/: libexiv2.so.27
src-tauri/libs/macos/: libexiv2.28.dylib  libgexiv2.dylib  libgio-2.0.0.dylib  libglib-2.0.0.dylib  libgobject-2.0.0.dylib
src-tauri/libs/macos/arm64/: libexiv2.28.dylib  libgexiv2.dylib  libgio-2.0.0.dylib  libglib-2.0.0.dylib  libgobject-2.0.0.dylib
src-tauri/libs/macos/x86_64/: libglib-2.0.0.dylib
src-tauri/src/: lib.rs  main.rs  metadata.rs
src/types/: metadata.ts
