[package]
name = "image-metadata-editor"
version = "0.1.0"
description = "A Tauri App"
authors = ["devlover.xyz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "image_metadata_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rexiv2 = "0.10.0"
thiserror = "2.0.12"
anyhow = "1.0.97"
base64 = "0.22.1"
# Untuk penanganan path lintas platform
dunce = "1.0.5"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# Tambahkan ini untuk membuat Rust tahu bahwa libgexiv2 tersedia secara lokal
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

